--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   </div>
 
   <audio autoplay loop id="backsound">
-    <source src="https://ia902706.us.archive.org/33/items/banda-naira-sampai-jadi-debu/Banda%20Naira%20-%20Sampai%20Jadi%20Debu.mp3" type="audio/mpeg">
-    Browsermu tidak mendukung audio.
+    <source src=Banda Neira - Sampai Jadi Debu (Video clip singkat) Story Wa.m4a
   </audio>
   <p><button onclick="document.getElementById('backsound').play()">▶️ Mainkan Lagu</button></p>
 
