--- a/index.html
+++ b/index.html
@@ -20,10 +20,23 @@
   </div>
 
   <audio autoplay loop id="backsound">
-    <source src=<audio autoplay loop id="backsound">
-  <source src="https://github.com/Egirizal/Kuis-untuk-cintaku/raw/refs/heads/main/Banda%20Neira%20-%20Sampai%20Jadi%20Debu%20(Video%20clip%20singkat)%20Story%20Wa.m4a" type="audio/mp4">
-  Browsermu tidak mendukung audio.
-</audio><p><button onclick="document.getElementById('backsound').play()">▶️ Mainkan Lagu Cinta</button></p>
+    <source src="https://github.com/Egirizal/Kuis-untuk-cintaku/raw/refs/heads/main/Banda%20Neira%20-%20Sampai%20Jadi%20Debu%20(Video%20clip%20singkat)%20Story%20Wa.m4a" type="audio/mp4">
+    Browsermu tidak mendukung audio.
+  </audio>
+
+  <p><button onclick="playMusic()">❤️ Putar Lagu "Sampai Jadi Debu"</button></p>
+
+  <script>
+    function playMusic() {
+      const audio = document.getElementById("backsound");
+      audio.volume = 0.6;
+      audio.play();
+    }
+    document.body.addEventListener('click', () => {
+      document.getElementById("backsound").play();
+    }, { once: true });
+  </script>
+
   <script src="script.js"></script>
 </body>
 </html>
