--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="background-text">Egi & Syifa sampai jadi debu</div>
   <div class="container">
     <h1>Kuis: Seberapa Kenal Kamu dengan Suamimu? 💍</h1>
     <img src="egi-ipak.jpg" alt="Foto Kita" class="foto" />
@@ -23,7 +24,6 @@
     <source src="https://github.com/Egirizal/Kuis-untuk-cintaku/raw/refs/heads/main/Banda%20Neira%20-%20Sampai%20Jadi%20Debu%20(Video%20clip%20singkat)%20Story%20Wa.m4a" type="audio/mp4">
     Browsermu tidak mendukung audio.
   </audio>
-
   <p><button onclick="playMusic()">❤️ Putar Lagu "Sampai Jadi Debu"</button></p>
 
   <script>
@@ -38,5 +38,6 @@
   </script>
 
   <script src="script.js"></script>
+  <script src="romantic-effects.js"></script>
 </body>
 </html>
