--- a/index.html
+++ b/index.html
@@ -41,3 +41,10 @@
   <script src="romantic-effects.js"></script>
 </body>
 </html>
+const style = document.createElement('style');
+style.innerHTML = `
+
+/* ... semua .heart dan keyframes di sini ... */
+
+`;
+document.head.appendChild(style);
